@@ -2,10 +2,7 @@ package service;
 
 import model.User;
 import org.apache.poi.hssf.usermodel.HSSFWorkbook;
-import org.apache.poi.ss.usermodel.Cell;
-import org.apache.poi.ss.usermodel.Row;
-import org.apache.poi.ss.usermodel.Sheet;
-import org.apache.poi.ss.usermodel.Workbook;
+import org.apache.poi.ss.usermodel.*;
 
 import java.io.FileOutputStream;
 import java.io.IOException;
@@ -15,35 +12,57 @@ import java.util.stream.Collectors;
 
 public class UserService {
 
+    private static final String FILE_NAME = "users.xls";
+    private static final String SHEET_NAME = "Лист Пользователей";
+
     public void createFile(List<User> userList) {
-        try (Workbook wb = new HSSFWorkbook();
-             FileOutputStream file = new FileOutputStream("rew.xls")) {
+        try (Workbook workbook = new HSSFWorkbook();
+             FileOutputStream fileOutputStream = new FileOutputStream(FILE_NAME)) {
 
-            Sheet sheet = wb.createSheet("Лист Пользователей");
+            Sheet sheet = workbook.createSheet(SHEET_NAME);
+            addUsersToSheet(userList, sheet);
 
-            addUserByRating(userList, sheet);
+            workbook.write(fileOutputStream);
 
-            wb.write(file);
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException("Ошибка при создании файла Excel: " + FILE_NAME, e);
         }
     }
 
-    public void addUserByRating(List<User> userList, Sheet sheet) {
-        List<User> list = userList.stream().sorted(Comparator.comparingInt(User::getRatingPoints).reversed())
-                .toList();
+    private void addUsersToSheet(List<User> userList, Sheet sheet) {
+        List<User> sortedUsers = userList.stream()
+                .sorted(Comparator.comparingInt(User::getRatingPoints).reversed())
+                .collect(Collectors.toList());
 
-        int count = 0;
-        for (User user : list) {
-            Row row = sheet.createRow(count);
+        createHeaderRow(sheet);
 
-            Cell cellName = row.createCell(0);
-            Cell cellRating = row.createCell(1);
+        int rowIndex = 1;
+        for (User user : sortedUsers) {
+            Row row = sheet.createRow(rowIndex++);
 
-            cellName.setCellValue(user.getName());
-            cellRating.setCellValue(user.getRatingPoints());
+            createCell(row, 0, user.getName());
+            createCell(row, 1, user.getRatingPoints());
+        }
+    }
 
-            count++;
+    private void createHeaderRow(Sheet sheet) {
+        Row headerRow = sheet.createRow(0);
+
+        createCell(headerRow, 0, "Имя");
+        createCell(headerRow, 1, "Очки рейтинга");
+    }
+
+    private void createCell(Row row, int columnIndex, Object value) {
+        Cell cell = row.createCell(columnIndex);
+
+        if (value instanceof String) {
+            cell.setCellValue((String) value);
+        } else if (value instanceof Integer) {
+            cell.setCellValue((Integer) value);
+        } else if (value instanceof Double) {
+            cell.setCellValue((Double) value);
+        } else {
+            cell.setCellValue(String.valueOf(value));
         }
     }
 }
